<resources>
    <string name="db_url" translatable="false">jdbc:mysql://192.168.1.185/vitrum</string>
    <string name="db_username" translatable="false">user</string>
    <string name="db_password" translatable="false">user</string>
    <string name="app_name" translatable="false">Vitrum</string>
    <string name="title_activity_suggestion">Suggestions</string>
    <string name="title_activity_worker">Worker Panel</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="worker">worker</string>
    <string name="inhabitant">inhabitant</string>
    <string name="loginOrEmail">Login or email address</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="pesel" translatable="false">PESEL</string>
    <string name="birthdate">Birthdate</string>
    <string name="town">Town</string>
    <string name="street">Street (if missing - leave it)</string>
    <string name="nr" translatable="false">nr</string>
    <string name="post_code">Post code</string>
    <string name="post">Post</string>
    <string name="phone">Phone number</string>
    <string name="gmina" translatable="false">Gmina</string>
    <string name="fab" translatable="false">Floating action button</string>
    <string name="suggestion_title">Suggestion title</string>
    <string name="suggestion_image">Suggestion image</string>
    <string name="suggestion_description">Suggestion description</string>
    <string name="arrow_vote_up">Arrow vote up</string>
    <string name="arrow_vote_down">Arrow vote down</string>
    <string name="comments_icon">Comments icon</string>
    <string name="approve">Approve</string>
    <string name="disapprove">Disapprove</string>
    <string name="reason">Reason of approve/disapprove suggestion</string>
    <string name="your_comment">Write your own comment</string>
    <string name="send">Send</string>
</resources>