<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.main.EntireSuggestionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/eSuggestionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="34sp" />

            <ImageView
                android:id="@+id/eSuggestionImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:contentDescription="@string/suggestion_image" />

            <TextView
                android:id="@+id/eSuggestionDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/voteUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/suggestionVoteUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:textSize="22sp" />

                    <ImageView
                        android:id="@+id/arrowVoteUp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/arrow_up_white"
                        android:contentDescription="@string/arrow_vote_up" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/voteDown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/suggestionVoteDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:textSize="22sp" />

                    <ImageView
                        android:id="@+id/arrowVoteDown"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/arrow_down_white"
                        android:contentDescription="@string/arrow_vote_down" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/suggestionComments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:textSize="22sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/comment"
                        android:contentDescription="@string/comments_icon" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/approveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/approve"
                    android:visibility="gone"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/disapproveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/disapprove"
                    android:visibility="gone"
                    android:layout_weight="1" />
            </LinearLayout>

            <EditText
                android:id="@+id/reasonEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:autofillHints="@string/reason"
                android:ems="10"
                android:hint="@string/reason"
                android:inputType="textMultiLine"
                android:visibility="gone"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/yourCommentEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:autofillHints="@string/your_comment"
                android:hint="@string/your_comment"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <Button
                android:id="@+id/sendCommentBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/send" />

            <ListView
                android:id="@+id/commentsListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="NestedScrolling" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>