<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChoiceOneActivity">

    <ImageView
        android:id="@+id/logoIv"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/choiceLoginBtn"
        android:layout_width="150dp"
        android:layout_height="76dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="131dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoIv" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="150dp"
        android:layout_height="76dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="131dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choiceLoginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>