<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/logoIv"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/workerBtn"
        android:layout_width="150dp"
        android:layout_height="76dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/worker"
        app:layout_constraintEnd_toStartOf="@+id/inhabitantBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoIv" />

    <Button
        android:id="@+id/inhabitantBtn"
        android:layout_width="150dp"
        android:layout_height="76dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/inhabitant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/workerBtn"
        app:layout_constraintTop_toBottomOf="@+id/logoIv" />

</androidx.constraintlayout.widget.ConstraintLayout>